# particle-system

./: .gitignore  CMakeLists.txt  config.cpp  config.h  firegravity.cpp  firegravity.cpp.txt  firegravity.h  force.cpp  force.h  gravityforce.cpp  gravityforce.cpp.txt  gravityforce.h  main.cpp  main.cpp.txt  particle.h  particlesystem.cpp  particlesystem.cpp.txt  particlesystem.h  render.cpp  render.cpp.txt  render.h  windforce.cpp  windforce.cpp.txt  windforce.h
assets/: color.kra
